# EasyOpenGl

./: CMakeLists.txt  CMakePresets.json  README.md
EasyOpengl/: BaseSurface.cpp  BaseSurface.h  CMakeLists.txt  Debug.cpp  Debug.h  EasyOpengl.cpp  Event.cpp  Event.h  EventCallback.cpp  EventCallback.h  ImageSurface.cpp  ImageSurface.h  IndexBuffer.cpp  IndexBuffer.h  Layout.h  Monitor.cpp  Monitor.h  ShaderProgram.cpp  ShaderProgram.h  Surface.cpp  Surface.h  Test.cpp  Texture.cpp  Texture.h  Vertex.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h  config.h  glTypeConversion.h  libinit.cpp  libinit.h  test.cpp
includes/GL/: glew.hpp
libs/glew-2.1.0/: glew.pc
libs/glew-2.1.0/include/GL/: glew.h
libs/glm-1.0.1/: CMakeLists.txt
shaders/: 2dMultiTexture.vert  2dMultiTexture.vs  multiTexture.fs  shder.frag
